--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* General styles */
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -13,10 +13,18 @@ header {
     color: white;
     width: 100%;
     text-align: center;
+    display:flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: 50px;
+}
+header > h1{
+    font-size:4rem;
 }
 
 .logo img {
-    max-width: 150px;
+    border-radius: 50%;
 }
 
 /* Hero Section */
@@ -60,7 +68,7 @@ section {
     text-align: center;
 }
 
-/* Projects Section */
+
 .projects {
     margin-bottom: 40px;
 }
@@ -90,7 +98,7 @@ section {
     color: #333;
 }
 
-/* Contact Form */
+
 form {
     display: flex;
     flex-direction: column;
